fix: target alignment on vertical metric

--- a/packages/charts/src/chart_types/metric/renderer/dom/_progress.scss
+++ b/packages/charts/src/chart_types/metric/renderer/dom/_progress.scss
@@ -51,6 +51,9 @@
 }
 
 .echSingleMetricTarget {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   overflow: visible;
   z-index: 1; // needed to pop up to top for hovered title
 
